fix: a couple minor copy-edit nits

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ layout: default
           so that you can track how well your unit-tests exercise your codebase.
         </p>
         <p class="description">
-          The <a href="https://github.com/istanbuljs/nyc" target="_blank">nyc</a> command-line-client for Istanbul,
+          The <a href="https://github.com/istanbuljs/nyc" target="_blank">nyc</a> command-line-client for Istanbul
           works well with most JavaScript testing frameworks: tap, mocha, ava, etc.
         </p>
 
         <div class="page-heading">Features</div>
 
         <ul class="description">
-          <li>first class support of ES2015, using <a href="https://github.com/istanbuljs/babel-plugin-istanbul">babel-plugin-istanbul</a>.</li>
+          <li>first class support of ES2015, using <a href="https://github.com/istanbuljs/babel-plugin-istanbul" target="_blank">babel-plugin-istanbul</a>.</li>
           <li>a collection of reporters, providing both terminal and HTML output:
             <img src="/images/terminal.png" alt="terminal output" />
             <img src="/images/browser.png" alt="browser output" />
