fix: this is our compromise, let's work on the tutorial content at this point and see what folks from the Babel project itself come back with

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
         <div class="page-heading">Features</div>
 
         <ul class="description">
-          <li>first class support of ES2015, using <a href="https://github.com/istanbuljs/babel-plugin-istanbul" target="_blank">babel-plugin-istanbul</a>.</li>
+          <li>first class support of ES6/ES2015+, using <a href="https://github.com/istanbuljs/babel-plugin-istanbul" target="_blank">babel-plugin-istanbul</a>.</li>
           <li>a collection of reporters, providing both terminal and HTML output:
             <img src="/images/terminal.png" alt="terminal output" />
             <img src="/images/browser.png" alt="browser output" />
